additional files to copy into ROTDIR after forecast DATA directory reorganize case file update: *_test and *_exp1

--- a/workflow/config/base.yaml
+++ b/workflow/config/base.yaml
@@ -118,7 +118,7 @@ config_base:
     export ROTDIR="{doc.places.ROTDIR}"
     export ROTDIR_DUMP="YES"
     export DUMP_SUFFIX="{doc.settings.DUMP_SUFFIX}"
-    export RUNDIR="{doc.places.DATAROOT}"
+    export RUNDIR="{doc.places.RUNDIR}"
     export ARCDIR="$NOSCRUB/archive/$PSLOT"
     export ICSDIR="{doc.places.ICSDIR}"
     export ATARDIR="{doc.archiving.ATARDIR}"
