--- a/env/HERA.env
+++ b/env/HERA.env
@@ -38,6 +38,9 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     export BACK="NO"
     export sys_tp="HERA"
 
+    module unload netcdfp/4.7.4
+    module load netcdf/4.7.0
+
 elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostpnt" ]; then
     export mpmd="--multi-prog"
     export CFP_MP="YES"
