--- a/workflow/layout/free_forecast_gfs.yaml
+++ b/workflow/layout/free_forecast_gfs.yaml
@@ -186,7 +186,7 @@ suite: !Cycle
       <<: *exclusive_task_template
       RUN: !calc up.RUN
       Disable: !calc doc.settings.cplwav=='.false.'
-      resources: !calc partition.resources.run_one_node_downstream
+      resources: !calc partition.resources.run_fv3ic
       J_JOB: JGLOBAL_WAVE_POST_SBS 
       Trigger: !Depend forecast
 
@@ -194,7 +194,7 @@ suite: !Cycle
       <<: *exclusive_task_template
       RUN: !calc up.RUN
       Disable: !calc doc.settings.cplwav=='.false.'
-      resources: !calc partition.resources.run_one_node_downstream
+      resources: !calc partition.resources.run_fv3ic
       J_JOB: JGLOBAL_WAVE_POST_PNT
       Trigger: !Depend forecast
 
