Issue #1 - update to UFS_UTILS ops-gfsv16.0.0 tag

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -29,7 +29,7 @@ protocol = git
 required = True
 
 [UFS_UTILS]
-branch = release/ops-gfsv16
+tag = ops-gfsv16.0.0
 local_path = sorc/ufs_utils.fd
 repo_url = https://github.com/NOAA-EMC/UFS_UTILS.git
 protocol = git
