--- a/ush/nems.configure.medcold_atm_ocn_ice.IN
+++ b/ush/nems.configure.medcold_atm_ocn_ice.IN
@@ -42,7 +42,10 @@ ICE_attributes::
   DumpFields = @[DumpFields]
   ProfileMemory = false
   OverwriteSlice = true
-  dbug_flag = 0  
+  mesh_ice = @[MESHICE]
+  stop_n = @[FHMAX]
+  stop_option = nhours
+  stop_ymd = -999
 ::
 
 # CMEPS cold run sequence
@@ -95,4 +98,5 @@ ALLCOMP_attributes::
       restart_n = 1
       restart_option = nhours
       restart_ymd = -999
+      dbug_flag = 0
 ::
