bugfix in script, enabling input.nml copy over update config.base for KEEPDATA YES NO issue

--- a/workflow/config/base.yaml
+++ b/workflow/config/base.yaml
@@ -101,7 +101,7 @@ config_base:
     export NMV="/bin/mv"
     export NLN="/bin/ln -sf"
     export VERBOSE="YES"
-    export KEEPDATA="{doc.settings.KEEPDATA}"
+    export KEEPDATA="{tools.YES_NO(doc.settings.KEEPDATA)}"
     export CHGRP_CMD="{doc.platform.CHGRP_RSTPROD_COMMAND}"
     export NEMSIOGET="$HOMEgfs/exec/nemsio_get"
 
