--- a/workflow/cases/coupled_free_forecast_wave.yaml
+++ b/workflow/cases/coupled_free_forecast_wave.yaml
@@ -14,7 +14,7 @@ case:
     nems_temp: 'med_atm_ocn_ice_wav'
     nems_temp_cold: 'medcold_atm_ocn_ice_wav'
     mom6ic_prepared: .false.
-    KEEPDATA: YES
+    KEEPDATA: NO
 
   nsst:
     NST_MODEL: 0
@@ -39,21 +39,21 @@ case:
     DO_SPPT: false
     layout:
        x: 6
-       y: 8
-       nth: 2
+       y: 12
+       nth: 1
        WGRP: 1
        WGRP_NTASKS: 24
        WRTIOBUF: "32M"
     cdmbgwd: "1.0,1.2"
 
   ocn_settings:
-    OCNPETS: 120
+    OCNPETS: 240
 
   ice_settings:
     ICEPETS: 48
 
   wave_settings: 
-    WAVPETS: 40
+    WAVPETS: 136
 
   post:
     downset: 2
