--- a/workflow/cases/atm_free_forecast.yaml
+++ b/workflow/cases/atm_free_forecast.yaml
@@ -7,10 +7,10 @@ case:
     SDATE: 2013-04-01t00:00:00
     EDATE: 2013-04-01t00:00:00
 
-    cplflx: .true.
+    cplflx: .false.
     print_esmf: .true.
-    nems_temp: 'med_atm_ocn_ice'
-    nems_temp_cold: 'medcold_atm_ocn_ice'
+    nems_temp: 'atm'
+    nems_temp_cold: 'atm'
     mom6ic_prepared: .false.
     KEEPDATA: NO
     ic_source: coupled_ic
@@ -19,7 +19,6 @@ case:
     NST_MODEL: 0
 
   output_settings:
-    OCN_INTERVAL: 24
     FHOUT_GFS: 6
     FHMIN_GFS: 0
     FHMAX_GFS: 48
@@ -38,15 +37,12 @@ case:
     DO_SPPT: false
     layout:
        x: 6
-       y: 12
-       nth: 1
+       y: 8
+       nth: 2
        WGRP: 1
        WGRP_NTASKS: 24
        WRTIOBUF: "32M"
     cdmbgwd: "1.0,1.2"
-
-  ocn_settings:
-    OCNPETS: 240
 
   ice_settings:
     ICEPETS: 48
