--- a/workflow/cases/prototype_5.yaml
+++ b/workflow/cases/prototype_5.yaml
@@ -7,13 +7,14 @@ case:
     SDATE: 2013-04-01t00:00:00
     EDATE: 2013-04-01t00:00:00
 
+    cplwav: .true.
+    cplwav2atm: .true.
     cplflx: .true.
     print_esmf: .true.
-    nems_temp: 'med_atm_ocn_ice'
-    nems_temp_cold: 'medcold_atm_ocn_ice'
+    nems_temp: 'med_atm_ocn_ice_wav'
+    nems_temp_cold: 'medcold_atm_ocn_ice_wav'
     mom6ic_prepared: .false.
     KEEPDATA: NO
-    ic_source: coupled_ic
 
   nsst:
     NST_MODEL: 0
@@ -22,7 +23,7 @@ case:
     OCN_INTERVAL: 24
     FHOUT_GFS: 6
     FHMIN_GFS: 0
-    FHMAX_GFS: 48
+    FHMAX_GFS: 840
     FHMAX_HF_GFS: 0
     FHOUT_HF_GFS: -1
 
@@ -50,6 +51,9 @@ case:
 
   ice_settings:
     ICEPETS: 48
+
+  wave_settings: 
+    WAVPETS: 136
 
   post:
     downset: 2
