--- a/workflow/config/base.yaml
+++ b/workflow/config/base.yaml
@@ -101,7 +101,7 @@ config_base:
     export NMV="/bin/mv"
     export NLN="/bin/ln -sf"
     export VERBOSE="YES"
-    export KEEPDATA="{doc.settings.KEEPDATA}"
+    export KEEPDATA="{tools.YES_NO(doc.settings.KEEPDATA)}"
     export CHGRP_CMD="{doc.platform.CHGRP_RSTPROD_COMMAND}"
     export NEMSIOGET="$HOMEgfs/exec/nemsio_get"
 
@@ -118,7 +118,7 @@ config_base:
     export ROTDIR="{doc.places.ROTDIR}"
     export ROTDIR_DUMP="YES"
     export DUMP_SUFFIX="{doc.settings.DUMP_SUFFIX}"
-    export RUNDIR="{doc.places.DATAROOT}"
+    export RUNDIR="{doc.places.RUNDIR}"
     export ARCDIR="$NOSCRUB/archive/$PSLOT"
     export ICSDIR="{doc.places.ICSDIR}"
     export ATARDIR="{doc.archiving.ATARDIR}"
