--- a/workflow/platforms/stampede2.yaml
+++ b/workflow/platforms/stampede2.yaml
@@ -9,11 +9,11 @@ platform: !Platform
 
   # name: the name of this platform; this must match what the underlying
   # scripts expect.
-  name: ORION
+  name: STAMPEDE2
 
   # detect: this is a function that returns true iff the user is on GAEA
   # and false otherwise
-  detect: !calc tools.machine_name=="Orion"
+  detect: !calc tools.machine_name=="stampede2.tacc.utexas.edu"
 
   # Additional variables to send to Rocoto XML entities or ecflow edits.
   metasched_more: !expand |
@@ -47,73 +47,46 @@ platform: !Platform
 
   partitions:
     Evaluate: false
-    default_shared: !calc doc.platform.partitions.orion
-    default_exclusive: !calc doc.platform.partitions.orion
-    default_service: !calc doc.platform.partitions.service
-    default_bigmem: !calc doc.platform.partitions.orion
-    orion:
+    default_shared: !calc doc.platform.partitions.batch
+    default_exclusive: !calc doc.platform.partitions.batch
+    default_service: !calc doc.platform.partitions.batch
+    default_bigmem: !calc doc.platform.partitions.batch
+    batch:
       <<: *global_partition_common
-      specification: orion
+      specification: batch
       # Queues to use for each job type
-      shared_queue: batch
-      exclusive_queue: batch
-      service_queue: batch
+      shared_queue: skx-normal
+      exclusive_queue: skx-normal
+      service_queue: skx-normal
 
       # Details about the scheduler on this cluster.
       scheduler_settings:
         scheduler_name: Slurm
         parallelism_name: HydraIMPI
         node_type: generic
-        physical_cores_per_node: 40
+        physical_cores_per_node: 48
         logical_cpus_per_core: 2
         hyperthreading_allowed: true
         indent_text: "  "
         memory_per_node: !calc (96*1024)
 
       exclusive_accounting_ref:
-        queue: batch
+        queue: skx-normal
         project: !calc doc.accounting.cpu_project
-        partition: orion
+        partition: batch
 
       shared_accounting_ref:
-        queue: batch
+        queue: skx-normal
         project: !calc doc.accounting.cpu_project
-        partition: orion
+        partition: batch
 
       service_accounting_ref:
-        queue: batch
+        queue: skx-normal
         project: !calc doc.accounting.cpu_project
-        partition: service
+        partition: batch
 
       # Generate the actual Python objects for the scheduler, parallelism,
       # and nodes:
-      scheduler: !calc |
-        tools.get_scheduler(scheduler_settings.scheduler_name, scheduler_settings)
-      parallelism: !calc |
-        tools.get_parallelism(scheduler_settings.parallelism_name, scheduler_settings)
-      nodes: !calc |
-        tools.node_tool_for(scheduler_settings.node_type, scheduler_settings)
-
-    service:
-      <<: *global_partition_common
-      specification: service
-      service_queue: batch
-
-      scheduler_settings:
-        scheduler_name: Slurm
-        parallelism_name: HydraIMPI
-        node_type: generic
-        physical_cores_per_node: 40
-        logical_cpus_per_core: 2
-        hyperthreading_allowed: true
-        indent_text: "  "
-        memory_per_node: !calc (96*1024)
-
-      service_accounting_ref:
-        queue: batch
-        project: !calc doc.accounting.cpu_project
-        partition: service
-
       scheduler: !calc |
         tools.get_scheduler(scheduler_settings.scheduler_name, scheduler_settings)
       parallelism: !calc |
