--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,7 +1,8 @@
 # External sub-modules of global-workflow
 
 [FV3GFS]
-tag = GFS.v16.0.10
+#### tag = GFS.v16.0.10
+hash = b8c5c22b2a2effe7b925fae1fa449ddec96be848
 local_path = sorc/fv3gfs.fd
 repo_url = https://github.com/ufs-community/ufs-weather-model.git
 protocol = git
@@ -49,12 +50,12 @@ repo_url = https://github.com/NOAA-EMC/EMC_gfs_wafs.git
 protocol = git
 required = False
 
-[aeroconv]
-hash = fd6c2387
-local_path = sorc/aeroconv.fd
-repo_url = https://github.com/NCAR/aeroconv.git
-protocol = git
-required = True
+# [aeroconv]
+# hash = fd6c2387
+# local_path = sorc/aeroconv.fd
+# repo_url = https://github.com/NCAR/aeroconv.git
+# protocol = git
+# required = True
 
 [externals_description]
 schema_version = 1.0.0
