--- a/env/ORION.env
+++ b/env/ORION.env
@@ -42,11 +42,13 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     export BACK=${BACK:-"YES"}
     export sys_tp="ORION"
 
-elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" ]; then
+elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostpnt" ]; then
 
     export mpmd="--multi-prog"
     export CFP_MP="YES"
     if [ $step = "waveprep" ]; then export MP_PULSE=0 ; fi
+    export wavempexec=${launcher}
+    export wave_mpmd=${mpmd}
 
 elif [ $step = "anal" ]; then
 
