one-step cold start implementation. This run style can be turned on using option in "settings" called "onestep" 	True if you want on-step cold start; 	False if traditional two-step;

--- a/ush/nems.configure.med_atm_ocn_ice_wav.IN
+++ b/ush/nems.configure.med_atm_ocn_ice_wav.IN
@@ -90,7 +90,7 @@ runSeq::
 # CMEPS variables
 
 DRIVER_attributes::
-      mediator_read_restart = .true.
+      mediator_read_restart = @[read_mediator]
 ::
 MED_attributes::
       ATM_model = @[atm_model]
@@ -112,5 +112,5 @@ ALLCOMP_attributes::
       restart_option = nhours
       restart_ymd = -999
       dbug_flag = 0
-      use_coldstart = .true.
+      use_coldstart = @[read_mediator]
 ::
