--- a/ush/nems.configure.med_atm_ocn_ice.IN
+++ b/ush/nems.configure.med_atm_ocn_ice.IN
@@ -77,7 +77,7 @@ runSeq::
 # CMEPS variables
 
 DRIVER_attributes::
-      mediator_read_restart = .true.
+      mediator_read_restart = @[read_mediator]
 ::
 MED_attributes::
       ATM_model = @[atm_model]
@@ -99,5 +99,5 @@ ALLCOMP_attributes::
       restart_option = nhours
       restart_ymd = -999
       dbug_flag = 0
-      use_coldstart = .true.
+      use_coldstart = @[read_mediator]
 ::
