--- a/workflow/cases/coupled_free_forecast_wave.yaml
+++ b/workflow/cases/coupled_free_forecast_wave.yaml
@@ -7,6 +7,7 @@ case:
     SDATE: 2013-04-01t00:00:00
     EDATE: 2013-04-01t00:00:00
 
+    onestep: .true.
     cplwav: .true.
     cplwav2atm: .true.
     cplflx: .true.
