--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,37 @@
 # Ignore all compiled files
+#--------------------------
 __pycache__
 *.pyc
 *.o
 *.mod
 
 # Ignore exec folder
+#-------------------
 exec/
 
 # Ignore fix directory symlinks
+#------------------------------
 fix/0readme
 fix/fix_*
 fix/gdas/
 fix/wafs
 
 # Ignore sorc and logs folders from externals
+#--------------------------------------------
 sorc/*log
 sorc/logs
 sorc/fv3gfs.fd
 sorc/gfs_post.fd
+sorc/gfs_wafs.fd
 sorc/gsi.fd
 sorc/ufs_utils.fd
-sorc/gfs_wafs.fd
 sorc/verif-global.fd
 
 # Ignore sorc symlinks
+#---------------------
 sorc/calc_analysis.fd
 sorc/calc_increment_ens.fd
 sorc/calc_increment_ens_ncio.fd
-sorc/chgres_cube.fd
 sorc/emcsfc_ice_blend.fd
 sorc/emcsfc_snow2mdl.fd
 sorc/filter_topo.fd
@@ -51,6 +55,7 @@ sorc/interp_inc.fd
 sorc/make_hgrid.fd
 sorc/make_solo_mosaic.fd
 sorc/mkgfsnemsioctl.fd
+sorc/ncdiag_cat.fd
 sorc/nemsio_chgdate.fd
 sorc/nemsio_get.fd
 sorc/nemsio_read.fd
@@ -72,60 +77,66 @@ sorc/wafs_makewafs.fd
 sorc/wafs_setmissing.fd
 
 # Ignore parm file symlinks
+#--------------------------
 parm/config/config.base
 parm/gldas
-parm/mon
 parm/post
 parm/wafs
 
 # Ignore scripts from externals
-jobs/JGDAS_ENKF_CHGRES
+#------------------------------
+# jobs symlinks
+jobs/JGDAS_ATMOS_ANALYSIS_DIAG
+jobs/JGDAS_ATMOS_CHGRES_FORENKF
+jobs/JGDAS_ATMOS_GLDAS
+jobs/JGDAS_ATMOS_VERFOZN
+jobs/JGDAS_ATMOS_VERFRAD
+jobs/JGDAS_ATMOS_VMINMON
+jobs/JGDAS_ENKF_DIAG
+jobs/JGDAS_ENKF_ECEN
 jobs/JGDAS_ENKF_FCST
 jobs/JGDAS_ENKF_POST
-jobs/JGDAS_ENKF_RECENTER
-jobs/JGDAS_ENKF_SURFACE
-jobs/JGDAS_GLDAS
-jobs/JGDAS_VERFOZN
-jobs/JGDAS_VERFRAD
-jobs/JGDAS_VMINMON
-jobs/JGFS_VMINMON
-jobs/JGFS_WAFS
-jobs/JGFS_WAFS_BLENDING
-jobs/JGFS_WAFS_GCIP
-jobs/JGFS_WAFS_GRIB2
-jobs/JGLOBAL_ANALCALC
-jobs/JGLOBAL_ANALDIAG
-jobs/JGLOBAL_ANALYSIS
-jobs/JGLOBAL_ENKF_ANALDIAG
-jobs/JGLOBAL_ENKF_INNOVATE_OBS
-jobs/JGLOBAL_ENKF_SELECT_OBS
-jobs/JGLOBAL_ENKF_UPDATE
-jobs/JGLOBAL_NCEPPOST
-jobs/JGLOBAL_POST_MANAGER
-scripts/exemcsfc_global_sfc_prep.sh.ecf
-scripts/exgdas_gldas.sh.ecf
-scripts/exgdas_nceppost.sh.ecf
-scripts/exgdas_vrfminmon.sh.ecf
-scripts/exgdas_vrfyozn.sh.ecf
-scripts/exgdas_vrfyrad.sh.ecf
-scripts/exgfs_nceppost.sh.ecf
-scripts/exgfs_vrfminmon.sh.ecf
-scripts/exgfs_wafs_blending.sh.ecf
-scripts/exgfs_wafs_gcip.sh.ecf
-scripts/exgfs_wafs_grib.sh.ecf
-scripts/exgfs_wafs_grib2.sh.ecf
-scripts/exglobal_analcalc_fv3gfs.sh.ecf
-scripts/exglobal_analdiag_fv3gfs.sh.ecf
-scripts/exglobal_analysis_fv3gfs.sh.ecf
-scripts/exglobal_enkf_chgres_fv3gfs.sh.ecf
-scripts/exglobal_enkf_fcst_fv3gfs.sh.ecf
-scripts/exglobal_enkf_innovate_obs_fv3gfs.sh.ecf
-scripts/exglobal_enkf_post_fv3gfs.sh.ecf
-scripts/exglobal_enkf_recenter_fv3gfs.sh.ecf
-scripts/exglobal_enkf_surface_fv3gfs.sh.ecf
-scripts/exglobal_enkf_update_fv3gfs.sh.ecf
-scripts/exglobal_innovate_obs_fv3gfs.sh.ecf
-scripts/exglobal_pmgr.sh.ecf
+jobs/JGDAS_ENKF_SELECT_OBS
+jobs/JGDAS_ENKF_SFC
+jobs/JGDAS_ENKF_UPDATE
+jobs/JGFS_ATMOS_VMINMON
+jobs/JGFS_ATMOS_WAFS
+jobs/JGFS_ATMOS_WAFS_BLENDING
+jobs/JGFS_ATMOS_WAFS_BLENDING_0P25
+jobs/JGFS_ATMOS_WAFS_GCIP
+jobs/JGFS_ATMOS_WAFS_GRIB2
+jobs/JGFS_ATMOS_WAFS_GRIB2_0P25
+jobs/JGLOBAL_ATMOS_ANALYSIS
+jobs/JGLOBAL_ATMOS_ANALYSIS_CALC
+jobs/JGLOBAL_ATMOS_NCEPPOST
+jobs/JGLOBAL_ATMOS_POST_MANAGER
+# scripts symlinks
+scripts/exemcsfc_global_sfc_prep.sh
+scripts/exgdas_atmos_chgres_forenkf.sh
+scripts/exgdas_atmos_gldas.sh
+scripts/exgdas_atmos_nceppost.sh
+scripts/exgdas_atmos_verfozn.sh
+scripts/exgdas_atmos_verfrad.sh
+scripts/exgdas_atmos_vminmon.sh
+scripts/exgdas_enkf_ecen.sh
+scripts/exgdas_enkf_fcst.sh
+scripts/exgdas_enkf_post.sh
+scripts/exgdas_enkf_select_obs.sh
+scripts/exgdas_enkf_sfc.sh
+scripts/exgdas_enkf_update.sh
+scripts/exgfs_atmos_nceppost.sh
+scripts/exgfs_atmos_vminmon.sh
+scripts/exgfs_atmos_wafs_blending.sh
+scripts/exgfs_atmos_wafs_blending_0p25.sh
+scripts/exgfs_atmos_wafs_gcip.sh
+scripts/exgfs_atmos_wafs_grib.sh
+scripts/exgfs_atmos_wafs_grib2.sh
+scripts/exgfs_atmos_wafs_grib2_0p25.sh
+scripts/exglobal_atmos_analysis.sh
+scripts/exglobal_atmos_analysis_calc.sh
+scripts/exglobal_atmos_pmgr.sh
+scripts/exglobal_diag.sh
+# ush symlinks
 ush/calcanl_gfs.py
 ush/calcinc_gfs.py
 ush/emcsfc_ice_blend.sh
@@ -167,7 +178,9 @@ ush/radmon_verf_bcor.sh
 ush/radmon_verf_time.sh
 ush/trim_rh.sh
 ush/wafs_blending.sh
+ush/wafs_grib2.regrid.sh
 ush/wafs_intdsk.sh
+# util symlinks
 util/sub_slurm
 util/sub_wcoss_c
 util/sub_wcoss_d
