Add UPP netcdf module library load to HERA.env to resolve runtime netcdf version mismatch

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -160,6 +160,10 @@ elif [ $step = "efcs" ]; then
 
 elif [ $step = "post" ]; then
 
+    source /apps/lmod/lmod/init/sh
+    module unload netcdf_parallel
+    module load netcdf_parallel/4.7.4
+
     nth_max=$(($npe_node_max / $npe_node_post))
 
     export NTHREADS_NP=${nth_np:-1}
