--- a/env/STAMPEDE2.env
+++ b/env/STAMPEDE2.env
@@ -15,6 +15,7 @@ step=$1
 
 export npe_node_max=48
 export launcher="srun --export=ALL"
+export launcher_fcst="ibrun "
 
 # Configure MPI environment
 export I_MPI_ADJUST_ALLREDUCE=5
@@ -112,7 +113,7 @@ elif [ $step = "fcst" ]; then
     export NTHREADS_FV3=${nth_fv3:-$nth_max}
     [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
     export cores_per_node=$npe_node_max
-    export APRUN_FV3="$launcher"
+    export APRUN_FV3="$launcher_fcst"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
