--- a/workflow/config/fcst.yaml
+++ b/workflow/config/fcst.yaml
@@ -6,7 +6,7 @@ config_fcst:
   filename: config.fcst
   FCSTEXEC: !FirstTrue
     - when: !calc doc.settings.cplflx==".true."
-      do: "nems_fv3_ccpp_mom6_cice5_ww3.x"
+      do: "ufs_model"
     - otherwise: "global_fv3gfs.x"
   more_exports_for_microphys: !FirstTrue
     - when: !calc ( doc.fv3_gfs_settings.imp_physics=="11" )
