--- a/workflow/defaults/places.yaml
+++ b/workflow/defaults/places.yaml
@@ -11,7 +11,7 @@ default_places: &default_places
   DMPDIR:      !calc doc.platform.DMPDIR
   RTMFIX:      !calc doc.platform.RTMFIX
  
-  FIXwave: !expand "{HOMEgfs}/fix/fix_wav"
+  FIXwave: !expand "{HOMEgfs}/fix/fix_wave"
 
   EXPDIR: !expand "{doc.platform.EXPROOT}/{doc.names.experiment}"
   ROTDIR: !expand "{doc.platform.COMROOT}/{doc.names.experiment}"
