updates for having cice fix file have resolution folders and removing cice5 references

--- a/workflow/config/base.yaml
+++ b/workflow/config/base.yaml
@@ -50,7 +50,7 @@ config_base:
     export EXECgfs=$HOMEgfs/exec
     export SCRgfs=$HOMEgfs/scripts
 
-    export FIXcice=$HOMEgfs/fix/fix_cice5
+    export FIXcice=$HOMEgfs/fix/fix_cice
     export FIXmom=$HOMEgfs/fix/fix_mom6
     export OCNFIXDIR=$HOMEgfs/fix/fix_reg2grb2
 
