more fv3->ufs dir name changes

--- a/Externals_coupled.cfg
+++ b/Externals_coupled.cfg
@@ -1,6 +1,6 @@
 [ufs-s2s-model]
 tag = ufss2s_cmeps_v0.7 
-local_path = sorc/fv3_coupled.fd
+local_path = sorc/ufs_coupled.fd
 repo_url = https://github.com/ufs-community/ufs-s2s-model
 protocol = git
 required = True
