add one-step option to no wave case

--- a/workflow/cases/coupled_free_forecast.yaml
+++ b/workflow/cases/coupled_free_forecast.yaml
@@ -7,6 +7,7 @@ case:
     SDATE: 2013-04-01t00:00:00
     EDATE: 2013-04-01t00:00:00
 
+    onestep: .true.
     cplflx: .true.
     print_esmf: .true.
     nems_temp: 'med_atm_ocn_ice'
