--- a/ush/nems.configure.medcold_atm_ocn_ice.IN
+++ b/ush/nems.configure.medcold_atm_ocn_ice.IN
@@ -51,8 +51,8 @@ ICE_attributes::
 # CMEPS cold run sequence
 
 runSeq::
-  @@[CPL_SLOW]
-    @@[CPL_FAST]
+  @@[coupling_interval_slow_sec]
+    @@[coupling_interval_fast_sec]
       MED med_phases_prep_atm
       MED -> ATM :remapMethod=redist
       ATM
@@ -94,7 +94,7 @@ ALLCOMP_attributes::
       ScalarFieldIdxGridNY = 2
       ScalarFieldName = cpl_scalars
       start_type = startup
-      case_name = ufs.s2s.cold
+      case_name = ufs.cpld.cold
       restart_n = 1
       restart_option = nhours
       restart_ymd = -999
