--- a/workflow/cases/coupled_free_forecast_wave.yaml
+++ b/workflow/cases/coupled_free_forecast_wave.yaml
@@ -8,12 +8,12 @@ case:
     EDATE: 2013-04-01t00:00:00
 
     onestep: .true.
+    cplmode: nems_orig
     cplwav: .true.
     cplwav2atm: .true.
     cplflx: .true.
     print_esmf: .true.
-    nems_temp: 'med_atm_ocn_ice_wav'
-    nems_temp_cold: 'medcold_atm_ocn_ice_wav'
+    nems_temp: 'cpld_wav'
     mom6ic_prepared: .false.
     KEEPDATA: NO
 
