--- a/workflow/defaults/settings.yaml
+++ b/workflow/defaults/settings.yaml
@@ -43,7 +43,8 @@ default_settings: &default_settings
   HPSS_PAR_PATH: !expand "/5year/NCEPDEV/emc-global/emc.glopara/WCOSS_C/{parexp}"
 
   onestep: .false.
-  read_mediator: !calc not onestep
+  use_coldstart: !calc not onestep
+  cplmode: nems_orig 
   cplflx: .false.
   cplice: !calc cplflx
   cplwav: .false.
