updates for wave model so that the forecast runs -- atm post still does not work

--- a/workflow/cases/coupled_free_forecast_wave.yaml
+++ b/workflow/cases/coupled_free_forecast_wave.yaml
@@ -55,6 +55,11 @@ case:
 
   wave_settings: 
     WAVPETS: 136
+    CPL_WAVIC: CFSR
+    waveGRD: 'gwes_30m'
+    wavepostGRD: 'gwes_30m'
+    waveesmfGRD: ''
+    waveinterpGRD: ''    
 
   post:
     downset: 2
