--- a/workflow/config/fcst.yaml
+++ b/workflow/config/fcst.yaml
@@ -165,6 +165,12 @@ config_fcst:
     export sppt_sfclimit=.true.
     export use_zmtnblck=.true.
 
+
+    if [[ $cplwav = ".true." ]]; then 
+       export DO_WAVE="YES"
+    else 
+       export DO_WAVE="NO"
+    fi
     #---------------------------------------------------------------------
     # Disable the use of coupler.res; get model start time from model_configure
     export USE_COUPLER_RES="NO"
