feature/coupled-crow: Updates for consistency  (#199)
* updated checkout build and link to use new unified model
- changed a few names from fv3 to ufs

* updates for linking to new fix

* point to a particular hash of ufs model

* remove theia modules

* update ww3 build for fv3->ufs naming change

* adding WW3 to build

* updates for having cice fix file have resolution folders and
removing cice5 references

* remove CODEwave as it is an unused variable

* more fv3->ufs dir name changes

* update location of fd_nems.yaml file for CMEPS-interface change

* modules used for successful forecast and atm post, but ocn post failed

* remove nowave parm file

* rename w/wave file

* change of parameters for mom6 to match rt tests

* add all the parm files for ocean

* updates for MOM6 to use same MOM_input templates as used in rt tests/parm dir

* add one-step option to no wave case

--- a/workflow/config/base.yaml
+++ b/workflow/config/base.yaml
@@ -50,9 +50,8 @@ config_base:
     export EXECgfs=$HOMEgfs/exec
     export SCRgfs=$HOMEgfs/scripts
 
-    export FIXcice=$HOMEgfs/fix/fix_cice5
+    export FIXcice=$HOMEgfs/fix/fix_cice
     export FIXmom=$HOMEgfs/fix/fix_mom6
-    export FIXgrid=$HOMEgfs/fix/fix_fv3grid
     export OCNFIXDIR=$HOMEgfs/fix/fix_reg2grb2
 
     # GLOBAL static environment parameters
