--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,56 @@
+# Ignore all compiled files
+#--------------------------
 __pycache__
+*.pyc
+*.o
+*.mod
+
+# Ignore exec folder
+#-------------------
 exec/
-fix
+
+# Ignore fix directory symlinks
+#------------------------------
 fix/0readme
-fix/fix_am
-fix/fix_chem
-fix/fix_fv3
-fix/fix_fv3_gmted2010
-fix/fix_gldas
-fix/fix_gsi
-fix/fix_gsi_MISSING
-fix/fix_orog
-fix/fix_sfc_climo
-fix/fix_verif
-fix/fix_wave_gfs
+fix/fix_*
 fix/gdas/
 fix/wafs
+
+# Ignore scripts from external symlink jobs
+#------------------------------
+jobs/JGDAS_ATMOS_ANALYSIS_DIAG
+jobs/JGDAS_ATMOS_CHGRES_FORENKF
+jobs/JGDAS_ATMOS_GLDAS
+jobs/JGDAS_ATMOS_VERFOZN
+jobs/JGDAS_ATMOS_VERFRAD
+jobs/JGDAS_ATMOS_VMINMON
+jobs/JGDAS_ENKF_DIAG
+jobs/JGDAS_ENKF_ECEN
 jobs/JGDAS_ENKF_FCST
 jobs/JGDAS_ENKF_POST
-jobs/JGDAS_ENKF_RECENTER
-jobs/JGDAS_VERFOZN
-jobs/JGDAS_VERFRAD
-jobs/JGDAS_VMINMON
-jobs/JGFS_VMINMON
-jobs/JGFS_WAFS
-jobs/JGFS_WAFS_BLENDING
-jobs/JGFS_WAFS_GCIP
-jobs/JGFS_WAFS_GRIB2
-jobs/JGLOBAL_ANALYSIS
-jobs/JGLOBAL_ENKF_INNOVATE_OBS
-jobs/JGLOBAL_ENKF_SELECT_OBS
-jobs/JGLOBAL_ENKF_UPDATE
-jobs/JGLOBAL_NCEPPOST
-jobs/JGLOBAL_POST_MANAGER
+jobs/JGDAS_ENKF_SELECT_OBS
+jobs/JGDAS_ENKF_SFC
+jobs/JGDAS_ENKF_UPDATE
+jobs/JGFS_ATMOS_VMINMON
+jobs/JGFS_ATMOS_WAFS
+jobs/JGFS_ATMOS_WAFS_BLENDING
+jobs/JGFS_ATMOS_WAFS_BLENDING_0P25
+jobs/JGFS_ATMOS_WAFS_GCIP
+jobs/JGFS_ATMOS_WAFS_GRIB2
+jobs/JGFS_ATMOS_WAFS_GRIB2_0P25
+jobs/JGLOBAL_ATMOS_ANALYSIS
+jobs/JGLOBAL_ATMOS_ANALYSIS_CALC
+jobs/JGLOBAL_ATMOS_NCEPPOST
+jobs/JGLOBAL_ATMOS_POST_MANAGER
+
+# Ignore parm file symlinks
+#--------------------------
 parm/config/config.base
-parm/mon/
+parm/gldas
+parm/mon
 parm/post
 parm/wafs
+
 scripts/exemcsfc_global_sfc_prep.sh.ecf
 scripts/exgdas_nceppost.sh.ecf
 scripts/exgdas_vrfminmon.sh.ecf
@@ -55,6 +70,9 @@ scripts/exglobal_enkf_recenter_fv3gfs.sh.ecf
 scripts/exglobal_enkf_update_fv3gfs.sh.ecf
 scripts/exglobal_innovate_obs_fv3gfs.sh.ecf
 scripts/exglobal_pmgr.sh.ecf
+
+
+sorc/*log
 sorc/calc_increment_ens.fd
 sorc/checkout-fv3gfs.log
 sorc/checkout-ufs_coupled.log
@@ -96,6 +114,7 @@ sorc/gfs_bufr.fd/vintg.o
 sorc/gfs_ncep_post.fd
 sorc/gfs_post.fd/
 sorc/gfs_wafs.fd/
+sorc/gldas.fd/
 sorc/global_chgres.fd
 sorc/global_cycle.fd
 sorc/global_enkf.fd
@@ -130,6 +149,7 @@ sorc/wafs_setmissing.fd
 sorc/checkout-fv3_coupled.log
 sorc/checkout-gsi.fd.log
 sorc/fv3_coupled.fd/
+
 ush/emcsfc_ice_blend.sh
 ush/emcsfc_snow.sh
 ush/fix_precip.sh
@@ -161,11 +181,11 @@ ush/radmon_verf_time.sh
 ush/trim_rh.sh
 ush/wafs_blending.sh
 ush/wafs_intdsk.sh
+
+# util symlinks
 util/sub_slurm
 util/sub_wcoss_c
 util/sub_wcoss_d
+
 workflow/user.yaml
-sorc/checkout-gldas.fd.log
-sorc/gldas.fd/
-sorc/reg2grb2.fd/*.o
-sorc/reg2grb2.fd/*.mod
+
