updates for build and checkout scripts to unify with develop and simplify build_all to add an option for coupling

--- a/sorc/fv3gfs_build.cfg
+++ b/sorc/fv3gfs_build.cfg
@@ -3,6 +3,8 @@
 
  Building libraries (libs) ............................. no
  Building fv3gfs (fv3gfs) .............................. yes
+ Building reg2grb2 (reg2grb2) .......................... no
+ Building ww3_prepost (ww3_prepost) .................... yes
  Building gsi (gsi) .................................... yes
  Building gldas (gldas) ................................ yes
  Building ncep_post (ncep_post) ........................ yes
