updating iovsr  after NCAR/ccpp-physics#514 namelist options iovrsw and iovrlw will be replaced by a single iovr option

--- a/workflow/config/fcst.yaml
+++ b/workflow/config/fcst.yaml
@@ -123,8 +123,7 @@ config_fcst:
     export ICO2=2
 
     export icliq_sw=1
-    export iovr_lw=1
-    export iovr_sw=1
+    export iovr=1
     export isubc_sw=2
     export isubc_lw=2
     
