updates for most recent commit to ufs-weather-model includes updates to make CICE input file ice_in match the latest in the rt test options, updates to include fractional grid options (set to false for now), update to have namelist options iovrsw and iovrlw will be replaced by a single iovr which was needed after NCAR/ccpp-physics#514

--- a/workflow/cases/coupled_free_forecast.yaml
+++ b/workflow/cases/coupled_free_forecast.yaml
@@ -9,6 +9,7 @@ case:
 
     onestep: .true.
     cplmode: nems_orig
+    FRAC_GRID: .false.
     cplflx: .true.
     print_esmf: .true.
     nems_temp: 'cpld'
