--- a/workflow/cases/coupled_free_forecast_wave.yaml
+++ b/workflow/cases/coupled_free_forecast_wave.yaml
@@ -9,11 +9,12 @@ case:
 
     onestep: .true.
     cplmode: nems_orig
+    FRAC_GRID: .false.
     cplwav: .true.
     cplwav2atm: .true.
     cplflx: .true.
     print_esmf: .true.
-    nems_temp: 'cpld_wav'
+    nems_temp: 'cpld_wave'
     mom6ic_prepared: .false.
     KEEPDATA: NO
 
