coupled: updates for merging checkout, build and link with develop branch (#206)
* update to waves scripts for merging with develop
- synced with develop where necessary and left changes in
prep and gridded post for coupled-crow updates that should remain

* removing ecflow scripts that are not in develop branch

* removing files from branch that do not appear in develop branch
and were not added for coupling in the coupled-crow branch

* updating sorc and ush files to match dev when these are not files
changes intentionally in coupled-crow branch and therefore should
match develop branch

* updating files to match develop that were not matching through
merge but should match develop branch

* cleaning up evn files after merge with develop

* cleaning up differences in jobs/rocoto folder from develop branch
as it does not seem that the changes here were made intentionally
in feature/coupled-crow so this brings us insync with the develop branch

* resolving differences between develop and this branch in terms
of wave variables for jobs/JGLOBAL_FORECAST

* updating module file to match develop

* updates for wave model so that the forecast runs
-- atm post still does not work

* fix typo

* updating .gitignore to match develop a little better

* cleaning up differences between checkout and link with merging to develop

* updates for build and checkout scripts to unify with develop
and simplify build_all to add an option for coupling

* fix typo in build all script

* updating .gitignore for linked files missing from list

* add fix files for ocean post

* changing -p to -c option and adding coupled to the ccpp -c

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,56 @@
+# Ignore all compiled files
+#--------------------------
 __pycache__
+*.pyc
+*.o
+*.mod
+
+# Ignore exec folder
+#-------------------
 exec/
-fix
+
+# Ignore fix directory symlinks
+#------------------------------
 fix/0readme
-fix/fix_am
-fix/fix_chem
-fix/fix_fv3
-fix/fix_fv3_gmted2010
-fix/fix_gldas
-fix/fix_gsi
-fix/fix_gsi_MISSING
-fix/fix_orog
-fix/fix_sfc_climo
-fix/fix_verif
-fix/fix_wave_gfs
+fix/fix_*
 fix/gdas/
 fix/wafs
+
+# Ignore scripts from external symlink jobs
+#------------------------------
+jobs/JGDAS_ATMOS_ANALYSIS_DIAG
+jobs/JGDAS_ATMOS_CHGRES_FORENKF
+jobs/JGDAS_ATMOS_GLDAS
+jobs/JGDAS_ATMOS_VERFOZN
+jobs/JGDAS_ATMOS_VERFRAD
+jobs/JGDAS_ATMOS_VMINMON
+jobs/JGDAS_ENKF_DIAG
+jobs/JGDAS_ENKF_ECEN
 jobs/JGDAS_ENKF_FCST
 jobs/JGDAS_ENKF_POST
-jobs/JGDAS_ENKF_RECENTER
-jobs/JGDAS_VERFOZN
-jobs/JGDAS_VERFRAD
-jobs/JGDAS_VMINMON
-jobs/JGFS_VMINMON
-jobs/JGFS_WAFS
-jobs/JGFS_WAFS_BLENDING
-jobs/JGFS_WAFS_GCIP
-jobs/JGFS_WAFS_GRIB2
-jobs/JGLOBAL_ANALYSIS
-jobs/JGLOBAL_ENKF_INNOVATE_OBS
-jobs/JGLOBAL_ENKF_SELECT_OBS
-jobs/JGLOBAL_ENKF_UPDATE
-jobs/JGLOBAL_NCEPPOST
-jobs/JGLOBAL_POST_MANAGER
+jobs/JGDAS_ENKF_SELECT_OBS
+jobs/JGDAS_ENKF_SFC
+jobs/JGDAS_ENKF_UPDATE
+jobs/JGFS_ATMOS_VMINMON
+jobs/JGFS_ATMOS_WAFS
+jobs/JGFS_ATMOS_WAFS_BLENDING
+jobs/JGFS_ATMOS_WAFS_BLENDING_0P25
+jobs/JGFS_ATMOS_WAFS_GCIP
+jobs/JGFS_ATMOS_WAFS_GRIB2
+jobs/JGFS_ATMOS_WAFS_GRIB2_0P25
+jobs/JGLOBAL_ATMOS_ANALYSIS
+jobs/JGLOBAL_ATMOS_ANALYSIS_CALC
+jobs/JGLOBAL_ATMOS_NCEPPOST
+jobs/JGLOBAL_ATMOS_POST_MANAGER
+
+# Ignore parm file symlinks
+#--------------------------
 parm/config/config.base
-parm/mon/
+parm/gldas
+parm/mon
 parm/post
 parm/wafs
+
 scripts/exemcsfc_global_sfc_prep.sh.ecf
 scripts/exgdas_nceppost.sh.ecf
 scripts/exgdas_vrfminmon.sh.ecf
@@ -55,6 +70,45 @@ scripts/exglobal_enkf_recenter_fv3gfs.sh.ecf
 scripts/exglobal_enkf_update_fv3gfs.sh.ecf
 scripts/exglobal_innovate_obs_fv3gfs.sh.ecf
 scripts/exglobal_pmgr.sh.ecf
+scripts/exemcsfc_global_sfc_prep.sh
+scripts/exgdas_atmos_chgres_forenkf.sh
+scripts/exgdas_atmos_gldas.sh
+scripts/exgdas_atmos_nceppost.sh
+scripts/exgdas_atmos_verfozn.sh
+scripts/exgdas_atmos_verfrad.sh
+scripts/exgdas_atmos_vminmon.sh
+scripts/exgdas_enkf_ecen.sh
+scripts/exgdas_enkf_fcst.sh
+scripts/exgdas_enkf_post.sh
+scripts/exgdas_enkf_select_obs.sh
+scripts/exgdas_enkf_sfc.sh
+scripts/exgdas_enkf_update.sh
+scripts/exgfs_atmos_nceppost.sh
+scripts/exgfs_atmos_vminmon.sh
+scripts/exgfs_atmos_wafs_blending.sh
+scripts/exgfs_atmos_wafs_blending_0p25.sh
+scripts/exgfs_atmos_wafs_gcip.sh
+scripts/exgfs_atmos_wafs_grib.sh
+scripts/exgfs_atmos_wafs_grib2.sh
+scripts/exgfs_atmos_wafs_grib2_0p25.sh
+scripts/exglobal_atmos_analysis.sh
+scripts/exglobal_atmos_analysis_calc.sh
+scripts/exglobal_atmos_pmgr.sh
+scripts/exglobal_diag.sh
+
+sorc/*log
+
+sorc/calc_analysis.fd
+sorc/calc_increment_ens_ncio.fd
+sorc/gdas2gldas.fd
+sorc/gldas2gdas.fd
+sorc/gldas_forcing.fd
+sorc/gldas_model.fd
+sorc/gldas_post.fd
+sorc/gldas_rst.fd
+sorc/interp_inc.fd
+sorc/ncdiag_cat.fd
+sorc/nemsio_chgdate.fd
 sorc/calc_increment_ens.fd
 sorc/checkout-fv3gfs.log
 sorc/checkout-ufs_coupled.log
@@ -96,6 +150,7 @@ sorc/gfs_bufr.fd/vintg.o
 sorc/gfs_ncep_post.fd
 sorc/gfs_post.fd/
 sorc/gfs_wafs.fd/
+sorc/gldas.fd/
 sorc/global_chgres.fd
 sorc/global_cycle.fd
 sorc/global_enkf.fd
@@ -130,6 +185,51 @@ sorc/wafs_setmissing.fd
 sorc/checkout-fv3_coupled.log
 sorc/checkout-gsi.fd.log
 sorc/fv3_coupled.fd/
+
+
+ush/calcanl_gfs.py
+ush/calcinc_gfs.py
+ush/emcsfc_ice_blend.sh
+ush/emcsfc_snow.sh
+ush/fix_precip.sh
+ush/fv3gfs_chgres.sh
+ush/fv3gfs_downstream_nems.sh
+ush/fv3gfs_driver_grid.sh
+ush/fv3gfs_dwn_nems.sh
+ush/fv3gfs_filter_topo.sh
+ush/fv3gfs_make_grid.sh
+ush/fv3gfs_make_orog.sh
+ush/getncdimlen
+ush/gfs_nceppost.sh
+ush/gfs_transfer.sh
+ush/gldas_archive.sh
+ush/gldas_forcing.sh
+ush/gldas_get_data.sh
+ush/gldas_liscrd.sh
+ush/gldas_post.sh
+ush/gldas_process_data.sh
+ush/global_chgres.sh
+ush/global_chgres_driver.sh
+ush/global_cycle.sh
+ush/global_cycle_driver.sh
+ush/gsi_utils.py
+ush/link_crtm_fix.sh
+ush/minmon_xtrct_costs.pl
+ush/minmon_xtrct_gnorms.pl
+ush/minmon_xtrct_reduct.pl
+ush/mkwfsgbl.sh
+ush/mod_icec.sh
+ush/ozn_xtrct.sh
+ush/radmon_ck_stdout.sh
+ush/radmon_err_rpt.sh
+ush/radmon_verf_angle.sh
+ush/radmon_verf_bcoef.sh
+ush/radmon_verf_bcor.sh
+ush/radmon_verf_time.sh
+ush/trim_rh.sh
+ush/wafs_blending.sh
+ush/wafs_grib2.regrid.sh
+ush/wafs_intdsk.sh
 ush/emcsfc_ice_blend.sh
 ush/emcsfc_snow.sh
 ush/fix_precip.sh
@@ -161,11 +261,11 @@ ush/radmon_verf_time.sh
 ush/trim_rh.sh
 ush/wafs_blending.sh
 ush/wafs_intdsk.sh
+
+# util symlinks
 util/sub_slurm
 util/sub_wcoss_c
 util/sub_wcoss_d
+
 workflow/user.yaml
-sorc/checkout-gldas.fd.log
-sorc/gldas.fd/
-sorc/reg2grb2.fd/*.o
-sorc/reg2grb2.fd/*.mod
+
