--- a/workflow/config/fcst.yaml
+++ b/workflow/config/fcst.yaml
@@ -87,6 +87,9 @@ config_fcst:
     export NX_GLB="{doc.ice_settings.NX_GLB}"
     export NY_GLB="{doc.ice_settings.NY_GLB}"
     export MESHICE="mesh.mx{doc.ice_settings.ICERES}.nc"
+    
+    # inline post
+    export WRITE_DOPOST="{doc.settings.inline_post}"
 
     if [[ "$machine" == "WCOSS_C" ]]; then
         export memory_fcst="1024M"
