feature/coupled-crow updating to use latest ups-weather (#210)
* updated checkout build and link to use new unified model
- changed a few names from fv3 to ufs

* updates for linking to new fix

* point to a particular hash of ufs model

* remove theia modules

* update ww3 build for fv3->ufs naming change

* adding WW3 to build

* updates for having cice fix file have resolution folders and
removing cice5 references

* remove CODEwave as it is an unused variable

* more fv3->ufs dir name changes

* update location of fd_nems.yaml file for CMEPS-interface change

* modules used for successful forecast and atm post, but ocn post failed

* remove nowave parm file

* rename w/wave file

* change of parameters for mom6 to match rt tests

* add all the parm files for ocean

* updates for MOM6 to use same MOM_input templates as used in rt tests/parm dir

* add one-step option to no wave case

* updates to make nems.configure template files more closely
match ufs-weather-model tests/parm templates for easier
updates and also added updates for frac grid/not frac grid option

* use latest ufs-weather-model

* update to latest code

* changing n_aero  from 1 to 0 following https://github.com/ufs-community/ufs-weather-model/pull/270/

* updating MOM_input_templates based on https://github.com/ufs-community/ufs-weather-model/pull/290

* updating iovsr  after NCAR/ccpp-physics#514 namelist options iovrsw and iovrlw will be replaced by a single iovr option

* updates for most recent commit to ufs-weather-model
includes updates to make CICE input file ice_in match the latest
in the rt test options, updates to include fractional grid options (set to false for now),
update to have namelist options iovrsw and iovrlw will be replaced by a single iovr
which was needed after NCAR/ccpp-physics#514

* deleting redundant/renamed files.  These files are now nems.configure.cpld(_wave).IN

--- a/ush/nems.configure.cpld.IN
+++ b/ush/nems.configure.cpld.IN
@@ -31,7 +31,6 @@ OCN_attributes::
   DumpFields = @[DumpFields]
   ProfileMemory = false
   OverwriteSlice = true
-  dbug_flag = 0 
 ::
 
 # ICE #
@@ -43,18 +42,18 @@ ICE_attributes::
   ProfileMemory = false
   OverwriteSlice = true
   mesh_ice = @[MESHICE]
-  stop_n = @[FHMAX]
+  stop_n = @[RESTART_N]
   stop_option = nhours
   stop_ymd = -999
 ::
 
 # CMEPS warm run sequence
 runSeq::
-@@[CPL_SLOW]
+@@[coupling_interval_slow_sec]
    MED med_phases_prep_ocn_accum_avg
    MED -> OCN :remapMethod=redist
    OCN
-   @@[CPL_FAST]
+   @@[coupling_interval_fast_sec]
      MED med_phases_prep_atm
      MED med_phases_prep_ice
      MED -> ATM :remapMethod=redist
@@ -77,7 +76,7 @@ runSeq::
 # CMEPS variables
 
 DRIVER_attributes::
-      mediator_read_restart = @[read_mediator]
+      mediator_read_restart = @[use_coldstart]
 ::
 MED_attributes::
       ATM_model = @[atm_model]
@@ -86,18 +85,18 @@ MED_attributes::
       history_n = 0
       history_option = nhours
       history_ymd = -999
-      coupling_mode = nems_orig
+      coupling_mode = @[CPLMODE]
 ::
 ALLCOMP_attributes::
       ScalarFieldCount = 2
       ScalarFieldIdxGridNX = 1
       ScalarFieldIdxGridNY = 2
       ScalarFieldName = cpl_scalars
-      start_type = startup
-      case_name = ufs.s2s
-      restart_n = @[restart_interval_hours]
+      start_type = @[RUNTYPE]
+      case_name = ./RESTART/ufs.cpld
+      restart_n = @[RESTART_N]
       restart_option = nhours
       restart_ymd = -999
-      dbug_flag = 0
-      use_coldstart = @[read_mediator]
+      dbug_flag = @[cap_dbug_flag]
+      use_coldstart = @[use_coldstart]
 ::
