--- a/workflow/cases/coupled_free_forecast.yaml
+++ b/workflow/cases/coupled_free_forecast.yaml
@@ -8,10 +8,11 @@ case:
     EDATE: 2013-04-01t00:00:00
 
     onestep: .true.
+    cplmode: nems_orig
+    FRAC_GRID: .false.
     cplflx: .true.
     print_esmf: .true.
-    nems_temp: 'med_atm_ocn_ice'
-    nems_temp_cold: 'medcold_atm_ocn_ice'
+    nems_temp: 'cpld'
     mom6ic_prepared: .false.
     KEEPDATA: YES
     ic_source: coupled_ic
