--- a/env/HERA.env
+++ b/env/HERA.env
@@ -262,9 +262,10 @@ elif [ $step = "epos" ]; then
 
 elif [ $step = "eposfsoi" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_eposfsoi))
+    #nth_max=$(($npe_node_max / $npe_node_eposfsoi))
+    nth_max=$(($npe_node_max / $npe_node_epos))
 
-    export NTHREADS_EPOS=${nth_eposfsoi:-$nth_max}
+    export NTHREADS_EPOS=${nth_epos:-$nth_max}
     [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
     export APRUN_EPOS="$launcher"
 
