fixed config/environment interaction

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -214,12 +214,9 @@ elif [ $step = "ecen" ]; then
 
 elif [ $step = "ecenfsoi" ]; then
 
-    # AFE need to trace back to see where these are expected to be set
-    #nth_max=$(($npe_node_max / $npe_node_ecenfsoi))
-    nth_max=$(($npe_node_max / $npe_node_ecen))
+    nth_max=$(($npe_node_max / $npe_node_ecenfsoi))
 
-    #export NTHREADS_ECEN=${nth_ecenfsoi:-$nth_max}
-    export NTHREADS_ECEN=${nth_ecen:-$nth_max}
+    export NTHREADS_ECEN=${nth_ecenfsoi:-$nth_max}
     [[ $NTHREADS_ECEN -gt $nth_max ]] && export NTHREADS_ECEN=$nth_max
     export APRUN_ECEN="$launcher"
 
