--- a/workflow/cases/coupled_free_forecast_nofrac_wave.yaml
+++ b/workflow/cases/coupled_free_forecast_nofrac_wave.yaml
@@ -8,8 +8,8 @@ case:
     EDATE: 2013-04-01t00:00:00
 
     onestep: .true.
-    cplmode: nems_frac
-    FRAC_GRID: .true.
+    cplmode: nems_orig
+    FRAC_GRID: .false.
     cplwav: .true.
     cplwav2atm: .true.
     cplflx: .true.
@@ -35,7 +35,6 @@ case:
     DELTIM: 450
     SEEDLET: 10
     CCPP_SUITE: FV3_GFS_v15p2_coupled
-    CPL_ATMIC: CFSRfracL64
     nst_anl: no
     DO_SKEB: false
     DO_SHUM: false
