add new parameters into /default

--- a/workflow/defaults/settings.yaml
+++ b/workflow/defaults/settings.yaml
@@ -39,6 +39,8 @@ default_settings: &default_settings
   nems_temp_cold: 'atm'
   ics_from: opsgfs
   inline_post: .false.
+  cplmode: nems_orig
+  FRAC_GRID: .false.
 
   parexp: prnemsrn
   HPSS_PAR_PATH: !expand "/5year/NCEPDEV/emc-global/emc.glopara/WCOSS_C/{parexp}"
